fixing controls of stacking order of overlapping elements

--- a/static/css/pricing.css
+++ b/static/css/pricing.css
@@ -371,6 +371,7 @@ input {
   height: 100%;
   background-color: rgba(217, 217, 217, 0.8);
   display: none;
+  z-index: 3;
 }
 
 .pop-up-window {
